sidebar alignment issues appeared on mobile devices which has been resolved

--- a/client/src/components/SidePanel/SidePanel.module.css
+++ b/client/src/components/SidePanel/SidePanel.module.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   display: flex;
   /* flex-direction: row; */
-  /* top: 50px; */
+  /* top: 0px; */
   width: min-content;
   padding-top: 36px;
   padding-bottom: 36px;
@@ -90,7 +90,9 @@
 }
 
 @media screen and (max-width: 550px) {
-
+  .SidePanel{
+    height: 69vh;
+  }
 
   .side-panel-title-text{
     display: none;
@@ -99,25 +101,30 @@
   .side-panel-title{
     display: flex;
     align-items: flex-start;
-    width: 45px;
+    width: 38px;
     height: 45px;
-    transform: translate(0px, 200px);
+    transform: translate(0px, 12.5vh);
     /* top: 12.5vh; */
     padding: 10px;
     padding-right: 5px;
     padding-left: 5px;
+    /* margin-right: 0px; */
   }
 
+  .maximized > .side-panel-title{
+    margin-right: -3px; 
+  }
 
-  
   .fa-chevron-right{
     color: var(--secondary-color);
     padding-left: 10px;
+    /* margin-right: 10px; */
   }
 
   .fa-chevron-left{
     color: white;
     padding-left: 10px;
+
   }
 
 }
